docs, err handling, bug fixes
